--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link rel="shortcut icon" href="\images\favicon.webp" type="image/x-icon">
+  <link rel="shortcut icon" href="images/favicon.webp" type="image/x-icon">
 
   
 
