--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="\images\agnelcov1.webp" alt="" class="img-fluid rounded-circle">
+      <img src="images/agnelcov1.webp" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
@@ -61,7 +61,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="\images\agbg1.webp" alt="" data-aos="fade-in" class="">
+      <img src="images/agnelcov1.webp" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Agnel Vincent</h2>
@@ -83,7 +83,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="\images\agnelcov1.webp" class="img-fluid" alt="">
+            <img src="images/agnelcov1.webp" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Web Developer.</h2>
@@ -273,7 +273,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="\images\hrx11.webp" class="img-fluid" alt="">
+                <img src="images/hrx11.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>HRX Brands</h4>
                   <a href="https://agnelvincent.github.io/HRX_brand_clone/" title="More Details" class="details-link" target="_blank"><i class="bi bi-link-45deg"></i></a>
@@ -285,7 +285,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="\images\peak11.webp" class="img-fluid" alt="">
+                <img src="images/peak11.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Peaky Blinders</h4>
                   <a href="https://agnelvincent.github.io/peaky_blinders_clone/" title="More Details" class="details-link" target="_blank"><i class="bi bi-link-45deg"></i></a>
@@ -295,7 +295,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="\images\fizz11.webp" class="img-fluid" alt="">
+                <img src="images/fizz11.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Appy Fizz</h4>
                   <a href="https://agnelvincent.github.io/Appy-Fizz-responsive-clone/" title="More Details" class="details-link"><i class="bi bi-link-45deg" target="_blank"></i></a>
@@ -305,7 +305,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="\images\fizz21.webp" class="img-fluid" alt="">
+                <img src="images/fizz21.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Appy Fizz</h4>
                   <a href="https://agnelvincent.github.io/Appy-Fizz-responsive-clone/" title="More Details" class="details-link"><i class="bi bi-link-45deg" target="_blank"></i></a>
@@ -315,7 +315,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="\images\peak22.webp" class="img-fluid" alt="">
+                <img src="images/peak22.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Peaky Blinders</h4>
                   <a href="https://agnelvincent.github.io/peaky_blinders_clone/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -325,7 +325,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="\images\hrx21.webp" class="img-fluid" alt="">
+                <img src="images/hrx21.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>HRX Brand</h4>
                   <a href="https://agnelvincent.github.io/HRX_brand_clone/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -335,7 +335,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="images\fizz31.webp" class="img-fluid" alt="">
+                <img src="images/fizz31.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Appy Fizz</h4>
                   <a href="https://agnelvincent.github.io/Appy-Fizz-responsive-clone/" title="More Details" class="details-link"><i class="bi bi-link-45deg" target="_blank"></i></a>
@@ -345,7 +345,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="\images\peak31.webp" class="img-fluid" alt="">
+                <img src="images/peak31.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Peaky Blinders</h4>
                   <a href="https://agnelvincent.github.io/peaky_blinders_clone/" title="More Details" class="details-link" ><i class="bi bi-link-45deg"></i></a>
@@ -355,7 +355,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="\images\hrx31.webp" class="img-fluid" alt="">
+                <img src="images/hrx31.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>HRX Brand</h4>
                   <a href="https://agnelvincent.github.io/HRX_brand_clone/" title="More Details" class="details-link" target="_blank"><i class="bi bi-link-45deg"></i></a>
