--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="images/agnelcov1.webp" alt="" data-aos="fade-in" class="">
+      <img src="images/agbg1.webp" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Agnel Vincent</h2>
