--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                 // these IDs from the previous steps
                 emailjs.sendForm('service_4otefuu', 'template_ad1m7vh', this)
                     .then(() => {
-                        alert('SUCCESS!');
+                        alert('Thank You for your response');
                     }, (error) => {
                         alert('FAILED...', error);
                     });
